demux: ps: add workarounds for hik imkh recordings

refs #25864

* Non standard mappings
* Non synchronized audio stream